# crab_models

crab_description/: CMakeLists.txt  package.xml
crab_description/launch/: load_urdf_onto_ros_param_server.launch
crab_description/meshes/: a_2038_02_18z_prt.stl  a_2038_02_23z_prt.stl  a_2038_02_31z_prt.stl  a_2038_02_34z_prt.stl  a_2038_02_60z_prt.stl  a_2039_02_14z_prt.stl  a_2039_02_25z_prt.stl  a_2039_02_32z_prt.stl  a_2039_02_36z_prt.stl  a_2039_02_41z_prt.stl  a_2039_02_46z_prt.stl  a_2039_02_47z_prt.stl  a_2039_02_49z_prt.stl  a_2039_02_52z_prt.stl  a_2039_02_55z_prt.stl  a_2039_02_61z_prt.stl  a_2040_01l_54z_prt.stl  a_2040_01r_20z_prt.stl  a_2067_01_3z_prt.stl  a_2067_01_4z_prt.stl  a_2095_01_45z_prt.stl  hebi_x5_1_15z_prt.stl  hebi_x5_1_57z_prt.stl  hebi_x5_4_19z_prt.stl  hebi_x5_4_26z_prt.stl  hebi_x5_4_37z_prt.stl  hebi_x5_4_38z_prt.stl  hebi_x5_4_39z_prt.stl  hebi_x5_4_58z_prt.stl  hebi_x5_9_11z_prt.stl  hebi_x5_9_63z_prt.stl  pm-2132-01_22z_prt.stl  pm-2132-01_29z_prt.stl  pm-2132-01_33z_prt.stl  pm-2132-01_6z_prt.stl  pm_2155_01_1z_prt.stl  pm_2155_01_21z_prt.stl  pm_2155_01_28z_prt.stl  pm_2155_01_53z_prt.stl  pp_2074_08_27z_prt.stl  (+17 more)
crab_description/scripts/: hold_up_crab_arms.py  move_crab.py
crab_description/scripts/common/: pid_controller.py
crab_description/urdf/: robot.urdf
crab_gazebo/: CMakeLists.txt  package.xml
crab_gazebo/launch/: move_crab.launch  spawn_urdf_in_gazebo.launch
crab_gazebo/world/: cube_pickup.world
